# end-to-end-messenger

./: .gitignore  SECURITY_AUDIT.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: shuttle-service.yml
docs/: deployment-guide.md  enhanced-security-overview.md  security-config-examples.md  wire-format-spec.md
ephemeral-messenger/: Dockerfile  FEATURES_SUMMARY.md  README.md  docker-compose.yml  test_document.securedoc  test_document.txt
ephemeral-messenger/client/: package.json
ephemeral-messenger/client-tauri/: index.html  package-lock.json  package.json
ephemeral-messenger/client-tauri/docs/: SESSION_CIPHER_README.md  session_cipher_guide.md  session_cipher_wire_format.md
ephemeral-messenger/client-tauri/src/: App.css  App.tsx
ephemeral-messenger/client-tauri/src-tauri/: Cargo.toml  tauri.conf.json
ephemeral-messenger/client-tauri/src-tauri/src/: access_modes.rs  account_commands.rs  admin_approvals.rs  crypto.rs  crypto_stub.rs  document.rs  fullwipe_prep.rs  hardware_token.rs  keydetect.rs  lib.rs  login_commands.rs  main.rs  main_stub.rs  memory.rs  securedoc.rs  security.rs  session.rs  session_commands.rs  settings_commands.rs  settings_store.rs  signal_placeholder.rs  stubs.rs  tor_integration.rs  wipe_manager.rs
ephemeral-messenger/client-tauri/src-tauri/src/bin.disabled/: demo.rs  session_cli.rs
ephemeral-messenger/client-tauri/src-tauri/src/scripture/: esv_manager.rs  mod.rs  public_domain.rs
ephemeral-messenger/client-tauri/src-tauri/src/transport/: cert_pinning.rs  layer_b_interrelay.rs  layer_c_local.rs  mod.rs  onion.rs  padding.rs  request_signing.rs  security_monitor.rs  signal_bridge.rs
ephemeral-messenger/configs/: docker-entrypoint.sh  docker-torrc
ephemeral-messenger/demo/: local-demo.sh  phase1_demo.py
ephemeral-messenger/docs/: API.md  DEPLOYMENT.md  DEVELOPER.md  SECURITY.md  SECURITY_HARDENING.md  USER_GUIDE.md  api-documentation.md  audit_and_admin.md  full_drive_wipe.md  local_login.md  opsec-checklist.md  security-model.md  settings.md  tails-runbook.md
ephemeral-messenger/scripts/: tails-setup.sh
ephemeral-messenger/server/: Dockerfile  go.mod  main.go  tor_controller.go
ephemeral-messenger/server-go/: Dockerfile  README.md  docker-compose.yml  go.mod  main.go  network.go  security.go  security_audit.go  security_middleware.go  test_server.sh  tor.go  tor_handlers.go  types.go
ephemeral-messenger/server-go/config/: bridges.conf  torrc.template
ephemeral-messenger/server-go/scripts/: setup-tor.sh
ephemeral-messenger/server-v2/: go.mod
ephemeral-messenger/server/auth/: admin.go
ephemeral-messenger/server/burner/: accounts.go
ephemeral-messenger/server/keydetect/: keydetect.go
ephemeral-messenger/server/keyfile/: keyfile.go
ephemeral-messenger/server/retention/: modes.go
ephemeral-messenger/server/sealedSender/: router.go
ephemeral-messenger/server/wipe/: README.md  executor.go  go.mod  monitor.go  policy.go
ephemeral-messenger/tests/: crypto_tests.py  integration_tests.go  security_tests.py
ephemeral-messenger/tools/: Makefile  README.md  create_ephemeral_onion.sh
ephemeral-messenger/tools/fullwipe/: Cargo.toml
ephemeral-messenger/tools/fullwipe/src/: main.rs
ephemeral-messenger/tools/keygen/: go.mod  main.go
ephemeral-messenger/tools/keygen-gui/: Cargo.toml
ephemeral-messenger/tools/keygen-gui/src/: main.rs
ephemeral-messenger/tools/yubikey-provision/: go.mod  main.go
local-relay/: Dockerfile  README.md  config.json  docker-compose.yml  go.mod  main.go
local-relay/internal/config/: config.go
local-relay/internal/crypto/: layer_c.go
local-relay/internal/relay/: handlers.go  server.go
local-relay/internal/shuttle/: circuit_breaker.go  client.go
local-relay/internal/wire/: format.go
public/: JESUS-IS-KING-Secure-Messaging-v1.0.2-Windows-Complete-FINAL.tar.gz.sha256
public/downloads/: jesus-is-king-linux-x64-1.0.0.AppImage  jesus-is-king-linux-x64-1.0.0.AppImage.sha256  jesus-is-king-macos-universal-1.0.0.dmg  jesus-is-king-macos-universal-1.0.0.dmg.sha256  jesus-is-king-macos-universal-1.0.0.dmg.sig  jesus-is-king-windows-x64-1.0.0.exe.sha256  jesus-is-king-windows-x64-1.0.0.exe.sig
shuttle-service/: Dockerfile  Makefile  README.md  config.example.json  docker-compose.yml  go.mod  main.go  redis.conf
shuttle-service/cmd/shuttle/: main.go
shuttle-service/internal/auth/: mtls.go
shuttle-service/internal/config/: config.go
shuttle-service/internal/queue/: queue.go  queue_test.go
shuttle-service/internal/security/: alert_manager.go  intrusion_detection.go  ip_tracker.go  ruleset.go
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Layout.tsx
standalone-messenger/: Cargo.toml  test_identity.json
standalone-messenger/src/: main.rs
website/: next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
website/components/: Layout.tsx
website/pages/: _document.tsx  conduct.tsx  downloads.tsx  how-to-use.tsx  index.tsx  legal.tsx  prayer.tsx  safety.tsx  scripture.tsx
website/public/: static.html
website/styles/: globals.css
windows-complete-app/: JESUS-IS-KING-Secure-Messaging-v1.0.0-Windows-Complete.tar.gz.sha256  JESUS-IS-KING-Secure-Messaging-v1.0.1-Windows-Complete-FIXED.tar.gz.sha256
windows-complete-app/crypto/: Cargo.toml  hardware_key.rs
windows-complete-app/gui/: index.html
windows-complete-app/installer/: build-installer.ps1  download-latest.bat  install.ps1
windows-complete-app/server/: main.go
windows-installer/: Cargo.toml  README.md  build.sh  index.html  installer.nsi  package-lock.json  package.json  tailwind.config.js  tauri.conf.json
windows-installer/src/: App.css  App.tsx  app.rs  gui.rs  main.rs
windows-installer/src-tauri/: tauri.conf.json
windows-messenger/: .\JESUS_IS_KING\identity.json  Cargo.toml
windows-messenger/llvm-mingw-20241217-ucrt-ubuntu-20.04-x86_64/lib/: liblldb.so.19.1  liblldbIntelFeatures.so.19.1
windows-messenger/src/: cross_platform_main.rs  crypto.rs  main.rs  simple_main.rs  ui.rs  windows_security.rs
(+76 files in other folders)
