[package]
name = "jesus-is-king-messenger"
version = "1.0.0"
description = "JESUS IS KING - Secure End-to-End Encrypted Messaging"
authors = ["Secure Messaging Team"]
license = "MIT"
edition = "2021"

[[bin]]
name = "jesus-is-king-messenger"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
chacha20poly1305 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
argon2 = "0.5"
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
crossterm = "0.28"