[package]
name = "jesus-is-king-messenger"
version = "1.0.3"
description = "JESUS IS KING - Professional Secure Messaging Application"
authors = ["JESUS IS KING Development Team"]
license = "MIT"
repository = "https://github.com/estroop3-gif/end-to-end-messenger"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
open = "5.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[[bin]]
name = "jesus-is-king-messenger"
path = "src/main.rs"
