[package]
name = "hardware-key-crypto"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
ed25519-dalek = "2.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
argon2 = "0.5"

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "hardware_key_crypto"
path = "hardware_key.rs"