[package]
name = "secure-messaging-suite"
version = "1.0.0"
description = "Secure messaging and document editing suite with session ciphers"
authors = ["Secure Messaging Team"]
license = "MIT"
edition = "2021"
default-run = "app"

[[bin]]
name = "app"
path = "src/main.rs"

# [[bin]]
# name = "session_cli"
# path = "src/bin/session_cli.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [ "tray-icon", "protocol-asset"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Core cryptography for session ciphers
chacha20poly1305 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
bs58 = "0.5"
qrcode = "0.14"

# Memory security
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }

# Additional dependencies for full functionality
tracing-subscriber = "0.3"
age = "0.10"
argon2 = "0.5"
ed25519-dalek = "2.0"
sodiumoxide = "0.2"
image = "0.25"
time = "0.3"
fs4 = "0.8"
x25519-dalek = "2.0"
nix = "0.29"
tar = "0.4"
sha2 = "0.10"
clap = { version = "4.4", features = ["derive"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
