[package]
name = "fullwipe_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fullwipe_cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = "2.0"
libsodium-sys = "0.2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
indicatif = "0.17"
dialoguer = "0.11"
nix = "0.27"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"