[package]
name = "keygen-gui"
version = "0.1.0"
edition = "2021"
authors = ["Ephemeral Messenger Team"]
description = "GUI Key Generation Tool for Ephemeral Messenger"

[dependencies]
eframe = "0.24"
egui = "0.24"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[[bin]]
name = "keygen-gui"
path = "src/main.rs"